--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -164,6 +164,8 @@
     <string name="forward_message">Forward Message</string>
     <string name="share_message">Share Message</string>
     <string name="copy_message_text">Copy Message Text</string>
+    <string name="select_text_to_copy">Select the text you want to copy:</string>
+    <string name="copy_all_text">Copy All</string>
     <string name="open_link_to_browser">Open Link to Browser</string>
     <string name="open_link_internal">Open Link Internally</string>
     <string name="copy_link">Copy Link</string>
