--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -316,6 +316,7 @@
     <string name="vibrate_one_long">One long vibration</string>
     <string name="vibrate_one_extra_long">One extra long vibration</string>
     <string name="vibrate_two_short_one_long">Two short, one long vibration</string>
+    <string name="vibrate_one_long_one_short_one_long">One long, one short, one long vibration</string>
     <string name="keyboard_layout">Keyboard Layout</string>
     <string name="keyboard_default">Default Keyboard</string>
     <string name="keyboard_send_key">Send Key</string>
