--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -262,8 +262,8 @@
     <string name="get_in_touch">Get in Touch</string>
     <string name="faqs">Frequently Asked Questions</string>
     <string name="get_help">Get Help</string>
-    <string name="get_help_summary">Have a question? As a one-man crew, I get a crazy amount of emails every day, which does dig into my development time. To help me out, it would be great if you could search here quick to see if I have addressed your question.</string>
-    <string name="get_help_summary_2">The help section is pretty extensive, but if you don\'t find your specific question, feel free to get in touch and I will be happy to get back to you!</string>
+    <string name="get_help_summary">Have a question? For a one-man crew, I do get a crazy amount of emails every day, which digs into the time I get to develop new features. To help me out, it would be great if you could search here quick to see if I have already addressed your question.</string>
+    <string name="get_help_summary_2">The help section is pretty extensive, but if you don\'t find your specific question, please do get in touch and I will be happy to get back to you!</string>
     <string name="features">Pulse\'s Features</string>
     <string name="issues">Issue Tracker</string>
     <string name="issues_summary">Also serves as a feature roadmap</string>
