add preference to settings to allow the user to specify their own phone number

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -403,6 +403,7 @@
     <string name="emoji_style">Emoji Style</string>
     <string name="emoji_style_default">System Default</string>
     <string name="emoji_style_android_o">Google\'s Android Oreo</string>
+    <string name="settings_phone_number">Phone Number</string>
 
 
     <!-- MMS Configuration Settings -->
